# AoRGhostManager

./: CMakeLists.txt  README.md  main.cpp
Ui/: AoRGhostManager.cpp  AoRGhostManager.h  AoRGhostManager.qrc  AoRGhostManager.ui  AoRGhostRemover.cpp  AoRGhostRemover.ui  Icon.rc  resource.h
